<resources>
    <string name="app_name">HealthFit Basic</string>
    <string name="healthfit_title_text">HEALTHFIT</string>
    <string name="sign_in_btn_text">Sign In</string>
    <string name="username_etv_hint_splash">Google Email</string>
    <string name="logout_btn_text">Logout</string>
    <string name="main_menu_tv_text">Main Menu</string>
    <string name="view_history_btn_text">View History</string>
    <string name="record_data_btn_text">Record Steps</string>
    <string name="my_profile_btn_text">My Profile</string>
    <string name="set_goals_btn_text">Set Goals</string>
    <string name="recording_steps_desc_text">Allows the user to enable and disable the recording of user steps over a time period. Recording will occur in the background until recording is stopped.</string>
    <string name="profile_desc_text">Allows the user to view basic profile information.\nProfile information includes:\n- Name\n- Height\n- Weight</string>
    <string name="history_desc_text">Allows the user to view their current history during a particular time period.\n\nHistory information includes:\n-Steps</string>
    <string name="goals_desc_text">Allows the user to view their current fitness goals.</string>
    <string name="logout_desc_text">Signs out from the current Google account.</string>
    <string name="recording_steps_desc_text_land">Allows the user to enable\nand disable the recording of\nuser steps over a time period.\nRecording will occur in the\nbackground until recording is\nstopped.</string>
    <string name="profile_desc_text_land">Allows the user to view\nbasic profile information.\n\nProfile information includes:\n- Name\n- Height\n- Weight</string>
    <string name="history_desc_text_land">Allows the user to view their\ncurrent history during a particular\ntime period.\n\nHistory information includes:\n-Steps</string>
    <string name="goals_desc_text_land">Allows the user to view\ntheir current fitness goals.</string>
    <string name="logout_desc_text_land">Signs out from the current\nGoogle account.</string>
    <string name="start_recording_steps_btn_text">Start Recording</string>
    <string name="stop_recording_steps_btn_text">Stop Recording</string>
    <string name="goals_title_text">Goals</string>
    <string name="no_goals_text">No Goals Have Been Set Yet!</string>
    <string name="users_name_profile_text">Name:</string>
    <string name="view_this_weeks_steps_btn_text">View this weeks steps</string>
    <string name="view_todays_steps_btn_text">View today\'s steps</string>
    <string name="user_history_activity_title_text">User History</string>
    <string name="splash_screen_image_desc">splash screen image</string>
    <string name="update_fields_btn_text">Update fields</string>
    <string name="recording_steps_screen_title_text">Record Your Steps</string>
    <string name="recording_steps_screen_desc">Press "Start Recording" to start recording steps. This will occur in the background, so you may lock your phone while using this. When done, press "Stop Recording" to finish recording your steps.</string>
    <string name="height_label_text">Height</string>
    <string name="feet_unit_label_text">ft</string>
    <string name="weight_label_text">Weight</string>
    <string name="pounds_unit_label_text">lbs</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_sign_in_request_id_token">1047166767015-c166fj666j3ra5oc8hcee1b4vhv57ivq.apps.googleusercontent.com</string>
</resources>
