<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    style="@style/StdStyle.Background"
    android:orientation="vertical"
    android:id="@+id/history_activity_layout">

    <TextView
        style="@style/StdStyle.Title"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_history_activity_title_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_view_week"
            style="@style/StdStyle.HistoryButton"
            android:text="@string/view_this_weeks_steps_btn_text" />

        <Button
            android:id="@+id/btn_view_today"
            style="@style/StdStyle.HistoryButton"
            android:text="@string/view_todays_steps_btn_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/show_text"
        style="@style/StdStyle.Text"
        android:layout_gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:visibility="gone" />

    <ListView
        android:id="@+id/show_list"
        style="@style/StdStyle.List"
        android:visibility="gone" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>