<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StdStyle.Background"
    android:id="@+id/recording_activity_layout">

    <TextView
        style="@style/StdStyle.Title"
        android:text="@string/recording_steps_screen_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        style="@style/StdStyle.TextRecordingDesc"
        android:text="@string/recording_steps_screen_desc"
        app:layout_constraintBottom_toTopOf="@id/recording_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/recording_btn"
        style="@style/StdStyle.Button"
        android:layout_marginStart="@dimen/recording_btn_margin"
        android:layout_marginEnd="@dimen/recording_btn_margin"
        android:text="@string/start_recording_steps_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>